Adding destroy chain for ibmz nodes

--- a/ci-operator/step-registry/hypershift/mce/ibmz/conformance/hypershift-mce-ibmz-conformance-workflow.yaml
+++ b/ci-operator/step-registry/hypershift/mce/ibmz/conformance/hypershift-mce-ibmz-conformance-workflow.yaml
@@ -12,7 +12,7 @@ workflow:
     test:
       - chain: hypershift-mce-ibmz-test
     post:
-      - ref: hypershift-mce-ibmz-destroy
+      - chain: hypershift-mce-ibmz-destroy
       - chain: ipi-aws-post
     env:
       HYPERSHIFT_BASEDOMAIN: "hypershift.ibmz.com"
