--- a/ci-operator/step-registry/hypershift/mce/ibmz/create/hypershift-mce-ibmz-create-ref.yaml
+++ b/ci-operator/step-registry/hypershift/mce/ibmz/create/hypershift-mce-ibmz-create-ref.yaml
@@ -2,8 +2,10 @@ ref:
   as: hypershift-mce-ibmz-create
   cli: latest
   env:
+    - name: HYPERSHIFT_BASEDOMAIN
+      documentation: "Base domain for hosted cluster"
     - name: HYPERSHIFT_NODE_COUNT
-      documentation: "The number of power nodes to join the agent cluster"
+      documentation: "The number of ibmz nodes to join the agent cluster"
     - name: AGENT_IBMZ_CREDENTIALS
       default: /etc/hypershift-agent-ibmz-credentials
     - name: OCP_VERSION
@@ -16,8 +18,6 @@ ref:
       documentation: "ROOT FS URL to use in OSImage config in AgentServiceConfig"
     - name: OCP_HCP_RELEASE
       documentation: "Openshift release version for Hosted Control Plane"
-    - name: HYPERSHIFT_BASEDOMAIN
-      documentation: "Base domain for hosted cluster"
     - name: IP_ADDRESSES
       docuentation: "List of IPv4 addresses for agents"
   commands: hypershift-mce-ibmz-create-commands.sh
