--- a/ci-operator/step-registry/hypershift/mce/ibmz/test/hypershift-mce-ibmz-test-chain.yaml
+++ b/ci-operator/step-registry/hypershift/mce/ibmz/test/hypershift-mce-ibmz-test-chain.yaml
@@ -1,7 +1,7 @@
 chain:
   as: hypershift-mce-ibmz-test
   steps:
-    - as: test-hostedcluster
+    - as: test-ibmz-hostedcluster
       cli: latest
       commands: |-
         set -x
