--- a/ci-operator/config/securesign/cosign/securesign-cosign-release-next.yaml
+++ b/ci-operator/config/securesign/cosign/securesign-cosign-release-next.yaml
@@ -1,9 +1,19 @@
 binary_build_commands: make cosign
 build_root:
   image_stream_tag:
-    name: release
-    namespace: openshift
-    tag: golang-1.19
+    name: builder
+    namespace: ocp
+    tag: rhel-9-golang-1.20-openshift-4.14
+releases:
+  initial:
+    integration:
+      name: "4.14"
+      namespace: ocp
+  latest:
+    integration:
+      include_built_images: true
+      name: "4.14"
+      namespace: ocp
 resources:
   '*':
     limits:
@@ -11,10 +21,9 @@ resources:
     requests:
       cpu: 100m
       memory: 200Mi
-test_binary_build_commands: make test
 tests:
-- as: test
-  commands: make test
+- as: unit
+  commands: GOFLAGS="" make test
   container:
     from: src
 zz_generated_metadata:
