--- a/ci-operator/jobs/securesign/cosign/securesign-cosign-release-next-presubmits.yaml
+++ b/ci-operator/jobs/securesign/cosign/securesign-cosign-release-next-presubmits.yaml
@@ -6,22 +6,22 @@ presubmits:
     - ^release-next$
     - ^release-next-
     cluster: build01
-    context: ci/prow/test
+    context: ci/prow/unit
     decorate: true
     decoration_config:
       skip_cloning: true
     labels:
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-securesign-cosign-release-next-test
-    rerun_command: /test test
+    name: pull-ci-securesign-cosign-release-next-unit
+    rerun_command: /test unit
     spec:
       containers:
       - args:
         - --gcs-upload-secret=/secrets/gcs/service-account.json
         - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
         - --report-credentials-file=/etc/report/credentials
-        - --target=test
+        - --target=unit
         command:
         - ci-operator
         image: ci-operator:latest
@@ -48,4 +48,4 @@ presubmits:
       - name: result-aggregator
         secret:
           secretName: result-aggregator
-    trigger: (?m)^/test( | .* )test,?($|\s.*)
+    trigger: (?m)^/test( | .* )unit,?($|\s.*)
