update test command
Signed-off-by: Nishant Parekh <nparekh@redhat.com>

--- a/ci-operator/jobs/openshift/linuxptp-daemon/openshift-linuxptp-daemon-release-4.15-presubmits.yaml
+++ b/ci-operator/jobs/openshift/linuxptp-daemon/openshift-linuxptp-daemon-release-4.15-presubmits.yaml
@@ -173,20 +173,20 @@ presubmits:
     - ^release-4\.15$
     - ^release-4\.15-
     cluster: build05
-    context: ci/prow/unittest
+    context: ci/prow/unit-test
     decorate: true
     labels:
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-openshift-linuxptp-daemon-release-4.15-unittest
-    rerun_command: /test unittest
+    name: pull-ci-openshift-linuxptp-daemon-release-4.15-unit-test
+    rerun_command: /test unit-test
     spec:
       containers:
       - args:
         - --gcs-upload-secret=/secrets/gcs/service-account.json
         - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
         - --report-credentials-file=/etc/report/credentials
-        - --target=unittest
+        - --target=unit-test
         command:
         - ci-operator
         image: ci-operator:latest
@@ -213,4 +213,4 @@ presubmits:
       - name: result-aggregator
         secret:
           secretName: result-aggregator
-    trigger: (?m)^/test( | .* )unittest,?($|\s.*)
+    trigger: (?m)^/test( | .* )unit-test,?($|\s.*)
