--- a/ci-operator/config/openshift/linuxptp-daemon/openshift-linuxptp-daemon-release-4.15.yaml
+++ b/ci-operator/config/openshift/linuxptp-daemon/openshift-linuxptp-daemon-release-4.15.yaml
@@ -43,8 +43,8 @@ resources:
       cpu: 100m
       memory: 200Mi
 tests:
-- as: unittest
-  commands: make unittest
+- as: unit-test
+  commands: make test
   container:
     from: src
 - as: gofmt
