--- a/ci-operator/config/openshift/multiarch/openshift-multiarch-master__nightly-4.14.yaml
+++ b/ci-operator/config/openshift/multiarch/openshift-multiarch-master__nightly-4.14.yaml
@@ -325,9 +325,20 @@ tests:
       BASE_DOMAIN: ocp-dev-ppc64le.com
       GO_VERSION: 1.20.7
       JQ_VERSION: "1.6"
+      LOKI_ENABLED: "false"
       OCP_VERSION: "4.14"
       RESOURCE_GROUP: ipi-cicd-resource-group
       TERRAFORM_VERSION: 1.5.5
+      TEST_SKIPS: deploymentconfigs\| should expose cluster services outside the cluster\|
+        FIPS TestFIPS\| Multi-stage image builds should succeed\| Optimized image
+        builds should succeed\| build can reference a cluster service\| custom build
+        with buildah\| oc new-app should succeed\| prune builds based on settings\|
+        s2i build with a root\| verify /run filesystem contents\| oc can run\| oc
+        debug\| oc idle\| Pods cannot access\| Image append should create\| Image
+        extract should extract\| Image info should display\| Image layer subresource\|
+        oc tag should change image\| when installed on the cluster should\| OpenShift
+        alerting rules\| The HAProxy router should\| egressrouter cni resources\|
+        pod should start\| pod sysctls
       WORKERS: "2"
       YQ_VERSION: 4.30.5
     workflow: openshift-e2e-ibmcloud-heterogeneous-upi
