Update ODH operator workflow to use hypershift for speed in e2e
Signed-off-by: Wen Zhou <wenzhou@redhat.com>

--- a/ci-operator/config/opendatahub-io/opendatahub-operator/opendatahub-io-opendatahub-operator-feature-rearchitecture.yaml
+++ b/ci-operator/config/opendatahub-io/opendatahub-operator/opendatahub-io-opendatahub-operator-feature-rearchitecture.yaml
@@ -56,13 +56,10 @@ tests:
     workflow: opendatahub-io-ci-image-mirror
 - as: opendatahub-operator-e2e
   steps:
-    cluster_profile: gcp
+    cluster_profile: aws-2
     env:
       COMPUTE_NODE_TYPE: n2-standard-8
-      OO_CHANNEL: fast
-      OO_INSTALL_NAMESPACE: openshift-operators
-      OO_PACKAGE: opendatahub-operator
-      OO_TARGET_NAMESPACES: '!all'
+      HYPERSHIFT_NODE_COUNT: "3"
     test:
     - as: e2e
       cli: latest
@@ -74,7 +71,7 @@ tests:
         requests:
           cpu: 2000m
           memory: 3Gi
-    workflow: optional-operators-ci-gcp
+    workflow: hypershift-hostedcluster-workflow
 zz_generated_metadata:
   branch: feature-rearchitecture
   org: opendatahub-io
