--- a/ci-operator/config/opendatahub-io/opendatahub-operator/opendatahub-io-opendatahub-operator-master.yaml
+++ b/ci-operator/config/opendatahub-io/opendatahub-operator/opendatahub-io-opendatahub-operator-master.yaml
@@ -66,13 +66,10 @@ tests:
     workflow: opendatahub-io-ci-image-mirror
 - as: opendatahub-operator-e2e
   steps:
-    cluster_profile: gcp
+    cluster_profile: aws-2
     env:
       COMPUTE_NODE_TYPE: n2-standard-8
-      OO_CHANNEL: rolling
-      OO_INSTALL_NAMESPACE: openshift-operators
-      OO_PACKAGE: opendatahub-operator
-      OO_TARGET_NAMESPACES: '!all'
+      HYPERSHIFT_NODE_COUNT: "3"
     test:
     - as: e2e
       cli: latest
@@ -84,17 +81,14 @@ tests:
         requests:
           cpu: 2000m
           memory: 3Gi
-    workflow: optional-operators-ci-gcp
+    workflow: hypershift-hostedcluster-workflow
 - as: opendatahub-manifests-e2e
   optional: true
   steps:
     cluster_profile: gcp
     env:
       COMPUTE_NODE_TYPE: n2-standard-8
-      OO_CHANNEL: rolling
-      OO_INSTALL_NAMESPACE: openshift-operators
-      OO_PACKAGE: opendatahub-operator
-      OO_TARGET_NAMESPACES: '!all'
+      HYPERSHIFT_NODE_COUNT: "3"
     test:
     - as: manifests-e2e
       commands: SKIP_OPERATOR_INSTALL=true $HOME/peak/installandtest.sh
@@ -103,7 +97,7 @@ tests:
         requests:
           cpu: 2000m
           memory: 3Gi
-    workflow: optional-operators-ci-gcp
+    workflow: hypershift-hostedcluster-workflow
 zz_generated_metadata:
   branch: master
   org: opendatahub-io
