--- a/ci-operator/jobs/opendatahub-io/opendatahub-operator/opendatahub-io-opendatahub-operator-main-presubmits.yaml
+++ b/ci-operator/jobs/opendatahub-io/opendatahub-operator/opendatahub-io-opendatahub-operator-main-presubmits.yaml
@@ -103,14 +103,14 @@ presubmits:
     branches:
     - ^main$
     - ^main-
-    cluster: build02
+    cluster: build05
     context: ci/prow/opendatahub-operator-e2e
     decorate: true
     decoration_config:
       skip_cloning: true
     labels:
-      ci-operator.openshift.io/cloud: gcp
-      ci-operator.openshift.io/cloud-cluster-profile: gcp
+      ci-operator.openshift.io/cloud: aws
+      ci-operator.openshift.io/cloud-cluster-profile: aws-2
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-opendatahub-io-opendatahub-operator-main-opendatahub-operator-e2e
@@ -163,12 +163,8 @@ presubmits:
         secret:
           secretName: ci-pull-credentials
       - name: cluster-profile
-        projected:
-          sources:
-          - secret:
-              name: cluster-secrets-gcp
-          - configMap:
-              name: cluster-profile-gcp
+        secret:
+          secretName: cluster-secrets-aws-2
       - name: pull-secret
         secret:
           secretName: registry-pull-credentials
