Few modifications as part of review

--- a/ci-operator/step-registry/hypershift/mce/ibmz/destroy/hypershift-mce-ibmz-destroy-chain.yaml
+++ b/ci-operator/step-registry/hypershift/mce/ibmz/destroy/hypershift-mce-ibmz-destroy-chain.yaml
@@ -8,6 +8,8 @@ chain:
         documentation: "The number of ibmz nodes to join the agent cluster"
       commands: |-
         set -x
+
+        # TO DO: Scale down nodepool, wait for nodepool to 0, delete agents, destroy HC
         
         # Destroying and removing the storage for VMs 
         for ((i = 0; i < ${HYPERSHIFT_NODE_COUNT} ; i++)); do
