--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.13__arm64-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.13__arm64-nightly.yaml
@@ -1758,6 +1758,20 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: baremetal-lab-upi
+- as: baremetal-ipi-validate-p1-f14
+  cluster: build05
+  cron: 30 21 5,18 * *
+  steps:
+    cluster_profile: equinix-ocp-metal-qe
+    dependencies:
+      OPENSHIFT_INSTALL_RELEASE_IMAGE_OVERRIDE: release:arm64-latest
+    env:
+      AUX_HOST: openshift-qe-bastion.arm.eng.rdu2.redhat.com
+      PROVISIONING_HOST: openshift-qe-bastion.arm.eng.rdu2.redhat.com
+      architecture: arm64
+      masters: "3"
+      workers: "0"
+    workflow: baremetal-lab-ipi-validate
 zz_generated_metadata:
   branch: release-4.13
   org: openshift
