--- a/ci-operator/step-registry/osd-ccs/fleet-manager/osd-ccs-fleet-manager-workflow.yaml
+++ b/ci-operator/step-registry/osd-ccs/fleet-manager/osd-ccs-fleet-manager-workflow.yaml
@@ -11,10 +11,11 @@ workflow:
       ROSA_LOGIN_ENV: "integration"
     pre:
     - ref: osd-ccs-fleet-manager-sc-provision
+    - ref: osd-ccs-fleet-manager-test
     - chain: rosa-aws-sts-provision-byo-vpc
     - ref: osd-ccs-conf-idp-htpasswd-multi-users
     post:
     - chain: rosa-aws-sts-deprovision-byo-vpc
     - ref: osd-ccs-fleet-manager-sc-deprovision
   documentation: |-
-    The workflow installs a service cluster and a management cluster with the specific configuration, then installs a rosa hypershift cluster in the same region. After finishing testing, clusters will be deprovsioned.
+    The workflow installs a service cluster and a management cluster with the specific configuration, then installs a rosa hypershift cluster in the same region. After finishing testing, clusters will be deprovisioned.
