--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__arm64-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__arm64-nightly.yaml
@@ -121,6 +121,7 @@ tests:
       PERSISTENT_MONITORING: "false"
       TAG_VERSION: '@4.14'
     test:
+    - ref: wait
     - chain: openshift-e2e-test-qe-destructive
     workflow: cucushift-installer-rehearse-aws-ipi-custom-security-groups
 - as: aws-ipi-baselinecaps-v414-f14
