--- a/ci-operator/config/securesign/cosign/securesign-cosign-release-next.yaml
+++ b/ci-operator/config/securesign/cosign/securesign-cosign-release-next.yaml
@@ -23,7 +23,7 @@ resources:
       memory: 200Mi
 tests:
 - as: unit
-  commands: mkdir -p /.sigstore && chmod -R 777 /.sigstore && GOFLAGS="" make test
+  commands: GOFLAGS="" pwd && ls -a && make test
   container:
     from: src
 zz_generated_metadata:
