--- a/ci-operator/config/securesign/cosign/securesign-cosign-release-next.yaml
+++ b/ci-operator/config/securesign/cosign/securesign-cosign-release-next.yaml
@@ -23,7 +23,7 @@ resources:
       memory: 200Mi
 tests:
 - as: unit
-  commands: GOFLAGS="" pwd && ls -a && make test
+  commands: GOFLAGS="" chmod -R +w /go/src/github.com/securesign/cosign && make test
   container:
     from: src
 zz_generated_metadata:
