--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.13__amd64-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.13__amd64-nightly.yaml
@@ -1915,6 +1915,7 @@ tests:
       FIPS_ENABLED: "true"
       TAG_VERSION: '@4.13'
     test:
+    - ref: wait
     - chain: openshift-e2e-test-qe-destructive
     workflow: cucushift-installer-rehearse-azure-ipi-ingress-custom-controller
 - as: azure-ipi-minimal-permission-p2-f28
