--- a/ci-operator/jobs/jboss-fuse/camel-quarkus-openshift-interop/jboss-fuse-camel-quarkus-openshift-interop-main-periodics.yaml
+++ b/ci-operator/jobs/jboss-fuse/camel-quarkus-openshift-interop/jboss-fuse-camel-quarkus-openshift-interop-main-periodics.yaml
@@ -19,7 +19,7 @@ periodics:
   name: periodic-ci-jboss-fuse-camel-quarkus-openshift-interop-main-camel-quarkus-ocp4.14-lp-interop-camel-quarkus-interop-aws
   reporter_config:
     slack:
-      channel: '#TODO'
+      channel: '#camel-quarkus-qe'
       job_states_to_report:
       - success
       - failure
