Updating config layout

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -2,7 +2,7 @@ base_images:
   trilliandb:
     namespace: securesign
     name: trillian-db
-    tag: v1.5.2
+    tag: redhat-v1.5.2
 build_root:
   image_stream_tag:
     name: builder
@@ -24,10 +24,8 @@ tests:
       MYSQL_DATABASE: test 
     test:
       commands: ./integration/integration_test.sh
-      env:
-      - name: MYSQL_USERNAME
-      - name: MYSQL_PASSWORD
-      - name: MYSQL_DATABASE
+    container:
+      from: src
 zz_generated_metadata:
   branch: release-next
   org: securesign
