Further config layout changes

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -21,11 +21,12 @@ tests:
     env:
       MYSQL_USERNAME: test
       MYSQL_PASSWORD: zaphod
-      MYSQL_DATABASE: test 
+      MYSQL_DATABASE: test
     test:
-      commands: ./integration/integration_test.sh
-    container:
-      from: src
+      - as: integration
+        commands: ./integration/integration_test.sh
+        container:
+          from: src
 zz_generated_metadata:
   branch: release-next
   org: securesign
