--- a/ci-operator/config/kubevirt-ui/kubevirt-plugin/kubevirt-ui-kubevirt-plugin-main.yaml
+++ b/ci-operator/config/kubevirt-ui/kubevirt-plugin/kubevirt-ui-kubevirt-plugin-main.yaml
@@ -9,12 +9,12 @@ images:
 releases:
   initial:
     integration:
-      name: "4.13"
+      name: "4.14"
       namespace: ocp
   latest:
     integration:
       include_built_images: true
-      name: "4.13"
+      name: "4.14"
       namespace: ocp
 resources:
   '*':
@@ -32,6 +32,7 @@ tests:
     env:
       BASE_DOMAIN: cnv-ci.syseng.devcluster.openshift.com
       COMPUTE_NODE_TYPE: m4.2xlarge
+      CONTROL_PLANE_INSTANCE_TYPE: m6a.2xlarge
       ZONES_COUNT: "1"
     test:
     - as: tests
