Added changes in config dir

--- a/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
+++ b/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
@@ -163,6 +163,7 @@ tests:
       ROOT_FS_URL: https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/4.13/4.13.0/rhcos-4.13.0-ppc64le-live-rootfs.ppc64le.img
     workflow: hypershift-mce-power-conformance
 - as: e2e-mce-ibmz-conformance
+  cluster: build01
   cron: 0 4 * * *
   steps:
     cluster_profile: aws
