--- a/ci-operator/step-registry/hypershift/mce/ibmz/create/hypershift-mce-ibmz-create-ref.yaml
+++ b/ci-operator/step-registry/hypershift/mce/ibmz/create/hypershift-mce-ibmz-create-ref.yaml
@@ -25,6 +25,11 @@ ref:
     requests:
       cpu: 100m
       memory: 100Mi
+  dnsConfig:
+    nameservers:
+    - 0.0.0.0
+    searches: 
+    - "bastion-z.svc.cluster.local"
   timeout: 1h
   credentials:
     - mount_path: /etc/hypershift-agent-ibmz-credentials
