--- a/ci-operator/step-registry/hypershift/mce/ibmz/destroy/hypershift-mce-ibmz-destroy-chain.yaml
+++ b/ci-operator/step-registry/hypershift/mce/ibmz/destroy/hypershift-mce-ibmz-destroy-chain.yaml
@@ -46,4 +46,9 @@ chain:
         requests:
           cpu: 100m
           memory: 100Mi
+      dnsConfig:
+        nameservers:
+        - 0.0.0.0
+        searches: 
+        - "bastion-z.svc.cluster.local"
       timeout: 30m0s
