Add a nonsensical field to config

--- a/ci-operator/config/openshift/ci-tools/openshift-ci-tools-master.yaml
+++ b/ci-operator/config/openshift/ci-tools/openshift-ci-tools-master.yaml
@@ -855,6 +855,7 @@ tests:
   commands: make lint
   container:
     from: golangci-lint
+  wrong_field_for_testing: random-value
 zz_generated_metadata:
   branch: master
   org: openshift
