Updated Config to address resource issues

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -24,9 +24,12 @@ tests:
       MYSQL_DATABASE: test
     test:
       - as: integration
+        from: trillian-db
         commands: ./integration/integration_test.sh
-        container:
-          from: src
+        resources:
+            requests:
+              cpu: 100m
+              memory: 200Mi
 zz_generated_metadata:
   branch: release-next
   org: securesign
