Fixing env vars

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -17,14 +17,16 @@ resources:
       memory: 200Mi
 tests:
 - as: integration
-  steps:
-    env:
-      MYSQL_USERNAME: test
-      MYSQL_PASSWORD: zaphod
-      MYSQL_DATABASE: test
+  env:
+  - name: MYSQL_USERNAME
+    default: test
+  - name: MYSQL_PASSWORD
+    default: zaphod
+  - name: MYSQL_DATABASE
+    default: test
     test:
       - as: integration
-        from: trillian-db
+        from: trilliandb
         commands: ./integration/integration_test.sh
         resources:
             requests:
