Fixing env vars

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -17,16 +17,14 @@ resources:
       memory: 200Mi
 tests:
 - as: integration
-  env:
-  - name: MYSQL_USERNAME
-    default: test
-  - name: MYSQL_PASSWORD
-    default: zaphod
-  - name: MYSQL_DATABASE
-    default: test
+  steps:
+    env:
+      MYSQL_USERNAME: "test"
+      MYSQL_PASSWORD: "zaphod"
+      MYSQL_DATABASE: "test"
     test:
       - as: integration
-        from: trilliandb
+        from: trillian-db
         commands: ./integration/integration_test.sh
         resources:
             requests:
