--- a/ci-operator/config/securesign/cosign/securesign-cosign-release-next.yaml
+++ b/ci-operator/config/securesign/cosign/securesign-cosign-release-next.yaml
@@ -23,7 +23,10 @@ resources:
       memory: 200Mi
 tests:
 - as: unit
-  commands: GOFLAGS="" chmod -R +w /go/src/github.com/securesign/cosign && make test
+  commands: |
+    export HOME="/tmp/home"
+    mkdir -p "${HOME}"
+    GOFLAGS="" make test
   container:
     from: src
 zz_generated_metadata:
