--- a/ci-operator/config/openshift/jenkins-sync-plugin/openshift-jenkins-sync-plugin-master.yaml
+++ b/ci-operator/config/openshift/jenkins-sync-plugin/openshift-jenkins-sync-plugin-master.yaml
@@ -1,28 +1,28 @@
 build_root:
   from_repository: true
 images:
-- dockerfile_path: Dockerfile
-  to: jenkins
-- dockerfile_literal: |
-    FROM quay.io/openshift/origin-jenkins-agent-maven:4.11.0 AS builder
-    WORKDIR /home/jenkins
-    COPY . .
-    USER 0
-    # We need a newer maven version as the RHEL package is still on 3.6.2
-    RUN curl -L -o maven.tar.gz https://dlcdn.apache.org/maven/maven-3/3.8.8/binaries/apache-maven-3.8.8-bin.tar.gz && \
-    mkdir maven && \
-    tar -xvzf maven.tar.gz -C maven --strip-component 1 && \
-    cp -R maven /opt && \
-    ln -sf /opt/maven/bin/mvn /usr/bin/mvn && \
-    chmod -R 777 $HOME && \
-    mvn --version
-  to: jenkins-maven-builder
+  - dockerfile_path: Dockerfile
+    to: jenkins
+  - dockerfile_literal: |
+      FROM quay.io/openshift/origin-jenkins-agent-maven:4.11.0 AS builder
+      WORKDIR /home/jenkins
+      COPY . .
+      USER 0
+      # We need a newer maven version as the RHEL package is still on 3.6.2
+      RUN curl -L -o maven.tar.gz https://dlcdn.apache.org/maven/maven-3/3.8.8/binaries/apache-maven-3.8.8-bin.tar.gz && \
+      mkdir maven && \
+      tar -xvzf maven.tar.gz -C maven --strip-component 1 && \
+      cp -R maven /opt && \
+      ln -sf /opt/maven/bin/mvn /usr/bin/mvn && \
+      chmod -R 777 $HOME && \
+      mvn --version
+    to: jenkins-maven-builder
 promotion:
   additional_images:
     jenkins-sync-plugin-e2e: src
   excluded_images:
-  - jenkins
-  - jenkins-maven-builder
+    - jenkins
+    - jenkins-maven-builder
   name: "4.14"
   namespace: ocp
 releases:
@@ -36,45 +36,51 @@ releases:
       name: "4.14"
       namespace: ocp
 resources:
-  '*':
+  "*":
     requests:
       cpu: 100m
       memory: 200Mi
 tests:
-- as: maven-verify
-  commands: mvn clean package verify
-  container:
-    from: jenkins-maven-builder
-  skip_if_only_changed: ^docs/|\.md$|^(?:.*/)?(?:\.gitignore|OWNERS|PROJECT|LICENSE)$
-- as: e2e-aws-jenkins-sync-plugin
-  skip_if_only_changed: ^docs/|\.md$|^(?:.*/)?(?:\.gitignore|OWNERS|PROJECT|LICENSE)$
-  steps:
-    cluster_profile: aws
-    test:
-    - as: test
-      cli: latest
-      commands: make test-e2e
-      dependencies:
-      - env: JENKINS_IMAGE
-        name: pipeline:jenkins
-      from: src
-      resources:
-        requests:
-          cpu: 100m
-    workflow: ipi-aws
-- as: e2e-aws-jenkins-sync-plugin-continuous
-  cron: 0 */12 * * *
-  steps:
-    cluster_profile: aws
-    test:
-    - as: test
-      cli: latest
-      commands: make test-e2e
-      from: src
-      resources:
-        requests:
-          cpu: 100m
-    workflow: ipi-aws
+  - as: maven-verify
+    commands: mvn clean package verify
+    container:
+      from: jenkins-maven-builder
+    skip_if_only_changed: ^docs/|\.md$|^(?:.*/)?(?:\.gitignore|OWNERS|PROJECT|LICENSE)$
+  - as: e2e-aws-jenkins-sync-plugin
+    skip_if_only_changed: ^docs/|\.md$|^(?:.*/)?(?:\.gitignore|OWNERS|PROJECT|LICENSE)$
+    steps:
+      cluster_claim:
+        architecture: amd64
+        cloud: aws
+        owner: openshift-ci
+        product: ocp
+        timeout: 1h0m0s
+        version: "4.13"
+      test:
+        - as: test
+          cli: latest
+          commands: make test-e2e
+          dependencies:
+            - env: JENKINS_IMAGE
+              name: pipeline:jenkins
+          from: src
+          resources:
+            requests:
+              cpu: 100m
+      workflow: generic-claim
+  - as: e2e-aws-jenkins-sync-plugin-continuous
+    cron: 0 */12 * * *
+    steps:
+      cluster_profile: aws
+      test:
+        - as: test
+          cli: latest
+          commands: make test-e2e
+          from: src
+          resources:
+            requests:
+              cpu: 100m
+      workflow: ipi-aws
 zz_generated_metadata:
   branch: master
   org: openshift
