hog scenarios off

--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
@@ -40,7 +40,7 @@ tests:
     - chain: create-infra-move-ingress-monitoring-registry
     workflow: redhat-chaos-krkn-hub-tests
 - as: krkn-hub-tests-hog-413
-  cron: 0 8 */2 * *
+  always_run: false
   steps:
     cluster_profile: aws
     env:
