--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__4.14-nightly.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__4.14-nightly.yaml
@@ -40,7 +40,7 @@ tests:
     - chain: create-infra-move-ingress-monitoring-registry
     workflow: redhat-chaos-krkn-hub-tests
 - as: krkn-hub-tests-hog-414
-  cron: 0 8 */2 * *
+  always_run: false
   steps:
     cluster_profile: aws
     env:
@@ -50,7 +50,7 @@ tests:
     pre:
     - chain: ipi-aws-pre
     - chain: create-infra-move-ingress-monitoring-registry
-    workflow: redhat-chaos-krkn-hub-tests
+    workflow: redhat-chaos-hog-scenarios
 zz_generated_metadata:
   branch: main
   org: redhat-chaos
