--- a/ci-operator/jobs/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main-presubmits.yaml
+++ b/ci-operator/jobs/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main-presubmits.yaml
@@ -54,6 +54,7 @@ presubmits:
     branches:
     - ^main$
     - ^main-
+    cluster: build01
     context: ci/prow/4.14-nightly-krkn-hub-tests-hog-414
     decorate: true
     labels:
@@ -272,6 +273,7 @@ presubmits:
     branches:
     - ^main$
     - ^main-
+    cluster: build01
     context: ci/prow/krkn-hub-tests-hog-413
     decorate: true
     labels:
