--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__4.14-nightly.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__4.14-nightly.yaml
@@ -39,8 +39,8 @@ tests:
     - chain: ipi-aws-pre
     - chain: create-infra-move-ingress-monitoring-registry
     workflow: redhat-chaos-krkn-hub-tests
-- as: krkn-hub-tests-hog-414
-  always_run: false
+- always_run: false
+  as: krkn-hub-tests-hog-414
   steps:
     cluster_profile: aws
     env:
