--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -24,12 +24,19 @@ tests:
       MYSQL_DATABASE: "test"
     test:
       - as: integration
-        from: trillian-db
+        from: trilliandb
         commands: ./integration/integration_test.sh
         resources:
             requests:
               cpu: 100m
               memory: 200Mi
+        dependencies:
+      - name: "test"
+        env: "MYSQL_USERNAME"
+      - name: "zaphod"
+        env: "MYSQL_PASSWORD"
+      - name: "test"
+        env: "MYSQL_DATABASE"
 zz_generated_metadata:
   branch: release-next
   org: securesign
