--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -1,7 +1,7 @@
 base_images:
   trilliandb:
-    namespace: securesign
     name: trillian-db
+    namespace: securesign
     tag: redhat-v1.5.2
 build_root:
   image_stream_tag:
@@ -20,19 +20,19 @@ tests:
   steps:
     test:
     - as: integration
-      from: trilliandb
       commands: ./integration/integration_test.sh
+      dependencies:
+      - env: MYSQL_USERNAME
+        name: test
+      - env: MYSQL_PASSWORD
+        name: zaphod
+      - env: MYSQL_DATABASE
+        name: test
+      from: trilliandb
       resources:
         requests:
           cpu: 100m
           memory: 200Mi
-      dependencies:
-      - name: "test"
-        env: "MYSQL_USERNAME"
-      - name: "zaphod"
-        env: "MYSQL_PASSWORD"
-      - name: "test"
-        env: "MYSQL_DATABASE"
 zz_generated_metadata:
   branch: release-next
   org: securesign
