test: move to test stage in the workflow and make failures non-blocking

--- a/ci-operator/step-registry/osd-ccs/fleet-manager/osd-ccs-fleet-manager-workflow.yaml
+++ b/ci-operator/step-registry/osd-ccs/fleet-manager/osd-ccs-fleet-manager-workflow.yaml
@@ -11,9 +11,10 @@ workflow:
       ROSA_LOGIN_ENV: "integration"
     pre:
     - ref: osd-ccs-fleet-manager-sc-provision
-    - ref: osd-ccs-fleet-manager-test
     - chain: rosa-aws-sts-provision-byo-vpc
     - ref: osd-ccs-conf-idp-htpasswd-multi-users
+    test:
+    - ref: osd-ccs-fleet-manager-test
     post:
     - chain: rosa-aws-sts-deprovision-byo-vpc
     - ref: osd-ccs-fleet-manager-sc-deprovision
