--- a/ci-operator/config/openshift/multiarch/openshift-multiarch-master__nightly-4.14.yaml
+++ b/ci-operator/config/openshift/multiarch/openshift-multiarch-master__nightly-4.14.yaml
@@ -338,7 +338,11 @@ tests:
         extract should extract\| Image info should display\| Image layer subresource\|
         oc tag should change image\| when installed on the cluster should\| OpenShift
         alerting rules\| The HAProxy router should\| egressrouter cni resources\|
-        pod should start\| pod sysctls
+        pod should start\| pod sysctls\| Managed cluster should have same number of
+        Machines and Nodes \| Managed cluster should have machine resources \| should
+        not have pod creation failures during install \| DNS should answer queries
+        using the local DNS endpoint \| events should not repeat pathologically for
+        ns/openshift-etcd
       WORKERS: "2"
       YQ_VERSION: 4.30.5
     workflow: openshift-e2e-ibmcloud-heterogeneous-upi
