Adjustments based on rehearsal

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -28,16 +28,17 @@ resources:
 tests:
 - as: integration
   steps:
+    env:
+      MYSQL_USERNAME: test
+      MYSQL_PASSWORD: zaphod
+      MYSQL_DATABASE: test
     test:
     - as: integration
       commands: ./integration/integration_test.sh
       dependencies:
       - env: MYSQL_USERNAME
-        name: test
       - env: MYSQL_PASSWORD
-        name: zaphod
       - env: MYSQL_DATABASE
-        name: test
       from: trilliandb
       resources:
         requests:
