--- a/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
@@ -1638,3 +1638,26 @@ presubmits:
           requests:
             cpu: "1"
     trigger: (?m)^/test( | .* )yamllint,?($|\s.*)
+  - agent: kubernetes
+    always_run: true
+    branches:
+    - ^master$
+    - ^master-
+    cluster: vsphere02
+    context: ci/prow/test-vsphere02
+    decorate: true
+    labels:
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
+    name: pull-ci-openshift-release-test-vsphere02
+    rerun_command: /test test-vsphere02
+    spec:
+      containers:
+      - command:
+        - /usr/local/bin/podman_hello_world
+        image: quay.io/podman/hello
+        imagePullPolicy: Always
+        name: ""
+        resources:
+          requests:
+            cpu: "1"
+    trigger: (?m)^/test( | .* )test-vsphere02,?($|\s.*)
