--- a/ci-operator/step-registry/redhat-chaos/krkn-hub-tests/redhat-chaos-krkn-hub-tests-chain.yaml
+++ b/ci-operator/step-registry/redhat-chaos/krkn-hub-tests/redhat-chaos-krkn-hub-tests-chain.yaml
@@ -2,6 +2,7 @@
 chain:
   as: redhat-chaos-krkn-hub-tests
   steps:
+  - ref: redhat-chaos-pod-scenarios-prometheus-disruption
   - ref: openshift-qe-cluster-density-v2
   - ref: redhat-chaos-pvc-scenarios-new-pod
   - ref: redhat-chaos-pvc-scenarios-prometheus-pod
