--- a/ci-operator/step-registry/redhat-chaos/krkn-hub-tests/redhat-chaos-krkn-hub-tests-workflow.yaml
+++ b/ci-operator/step-registry/redhat-chaos/krkn-hub-tests/redhat-chaos-krkn-hub-tests-workflow.yaml
@@ -3,6 +3,7 @@ workflow:
   as: redhat-chaos-krkn-hub-tests
   steps:
     test:
+    - ref: redhat-chaos-pod-scenarios-prometheus-disruption
     - ref: openshift-qe-cluster-density-v2
     - ref: redhat-chaos-pvc-scenarios-new-pod
     - ref: redhat-chaos-pvc-scenarios-prometheus-pod
