update binary name for hcp for mce 2.4
Signed-off-by: David Huynh <dhuynh@redhat.com>

--- a/ci-operator/step-registry/hypershift/mce/aws/create/hypershift-mce-aws-create-chain.yaml
+++ b/ci-operator/step-registry/hypershift/mce/aws/create/hypershift-mce-aws-create-chain.yaml
@@ -22,7 +22,7 @@ chain:
       commands: |-
         set -exuo pipefail
 
-        MCE_VERSION=$(oc get $(oc get multiclusterengines -oname) -ojsonpath="{.status.currentVersion}" | cut -c 1-3)
+        MCE_VERSION=$(oc get "$(oc get multiclusterengines -oname)" -ojsonpath="{.status.currentVersion}" | cut -c 1-3)
         HYPERSHIFT_NAME=hcp
         if (( $(echo "$MCE_VERSION < 2.4" | bc -l) )); then
           echo "MCE version is less than 2.4"
