--- a/ci-operator/step-registry/hypershift/mce/kubevirt/destroy/hypershift-mce-kubevirt-destroy-chain.yaml
+++ b/ci-operator/step-registry/hypershift/mce/kubevirt/destroy/hypershift-mce-kubevirt-destroy-chain.yaml
@@ -10,7 +10,7 @@ chain:
           source "${SHARED_DIR}/proxy-conf.sh"
         fi
 
-        MCE_VERSION=$(oc get $(oc get multiclusterengines -oname) -ojsonpath="{.status.currentVersion}" | cut -c 1-3)
+        MCE_VERSION=$(oc get "$(oc get multiclusterengines -oname)" -ojsonpath="{.status.currentVersion}" | cut -c 1-3)
         HYPERSHIFT_NAME=hcp
         if (( $(echo "$MCE_VERSION < 2.4" | bc -l) )); then
           echo "MCE version is less than 2.4"
