DNM - ci testing

--- a/ci-operator/config/shiftstack/shiftstack-ci/shiftstack-shiftstack-ci-main__periodic-4.14.yaml
+++ b/ci-operator/config/shiftstack/shiftstack-ci/shiftstack-shiftstack-ci-main__periodic-4.14.yaml
@@ -51,7 +51,7 @@ tests:
     - ref: fips-check
     workflow: openshift-e2e-openstack-ipi
 - as: e2e-openstack-proxy
-  minimum_interval: 72h
+  minimum_interval: 73h
   steps:
     cluster_profile: openstack-vh-mecha-central
     workflow: openshift-e2e-openstack-proxy
@@ -123,7 +123,7 @@ tests:
       TEST_SUITE: openshift/conformance/serial
     workflow: openshift-e2e-openstack-ipi
 - as: e2e-openstack-kuryr
-  minimum_interval: 24h
+  minimum_interval: 25h
   steps:
     cluster_profile: openstack-kuryr
     env:
@@ -170,7 +170,7 @@ tests:
     cluster_profile: openstack-hwoffload
     workflow: openshift-e2e-openstack-dualstack
 - as: e2e-openstack-ccpmso
-  minimum_interval: 240h
+  minimum_interval: 241h
   steps:
     cluster_profile: openstack-vexxhost
     env:
@@ -192,7 +192,7 @@ tests:
     workflow: openshift-e2e-openstack-ipi
   timeout: 7h0m0s
 - as: e2e-openstack-ccpmso-zone
-  minimum_interval: 240h
+  minimum_interval: 241h
   steps:
     cluster_profile: openstack-kuryr
     env:
@@ -210,6 +210,7 @@ tests:
       resources:
         requests:
           cpu: 100m
+      timeout: 3h0m0s
     - ref: openshift-e2e-test
     - ref: openstack-test-openstack
     workflow: openshift-e2e-openstack-ipi
