--- a/ci-operator/step-registry/hypershift/powervs/run-e2e/hypershift-powervs-run-e2e-chain.yaml
+++ b/ci-operator/step-registry/hypershift/powervs/run-e2e/hypershift-powervs-run-e2e-chain.yaml
@@ -17,9 +17,13 @@ chain:
         --e2e.control-plane-operator-image=${HYPERSHIFT_RELEASE_LATEST} \
         --e2e.node-pool-replicas=2 \
         --e2e.powervs-resource-group=ibm-hypershift-dev \
-        --e2e.powervs-region=tok \
-        --e2e.powervs-zone=tok04 \
-        --e2e.powervs-vpc-region=jp-tok
+        --e2e.powervs-region=syd \
+        --e2e.powervs-zone=syd04 \
+        --e2e.powervs-vpc-region=au-syd \
+        --e2e.powervs-sys-type=e980 \
+        --e2e-powervs-cloud-instance-id=b8d1fc6f-c7e1-4db7-8337-1192f2736063 \
+        --e2e-powervs-cloud-connection=rh-upstream-hypershift-powervs-ci-cc \
+        --e2e-powervs-vpc=rh-upstream-hypershift-powervs-ci-vpc
       credentials:
         - mount_path: /etc/hypershift-pool-powervs-credentials
           name: hypershift-pool-powervs-credentials
