--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -28,19 +28,10 @@ resources:
 tests:
 - as: integration
   steps:
-    env:
-      MYSQL_USERNAME: test
-      MYSQL_PASSWORD: zaphod
-      MYSQL_DATABASE: test
     test:
     - as: integration
       commands: ./integration/integration_test.sh
-      dependencies:
-      - env: MYSQL_USERNAME
-      - env: MYSQL_PASSWORD
-      - env: MYSQL_DATABASE
-      from: trilliandb
-      resources:
+      from: src
         requests:
           cpu: 100m
           memory: 200Mi
