--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -32,6 +32,7 @@ tests:
     - as: integration
       commands: ./integration/integration_test.sh
       from: src
+      resources:
         requests:
           cpu: 100m
           memory: 200Mi
