Running Trillian db in test

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -31,7 +31,7 @@ tests:
     test:
     - as: integration
       commands: ./integration/integration_test.sh
-      from: src
+      from: trilliandb
       resources:
         requests:
           cpu: 100m
