--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -29,9 +29,15 @@ tests:
 - as: integration
   steps:
     test:
+    - as: dbsetup
+      from: trilliandb
+      resources:
+        requests:
+          cpu: 100m
+          memory: 200Mi
     - as: integration
       commands: ./integration/integration_test.sh
-      from: trilliandb
+      from: src
       resources:
         requests:
           cpu: 100m
