Fixing db step config

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -31,6 +31,7 @@ tests:
     test:
     - as: dbsetup
       from: trilliandb
+      commands: MYSQL_USERNAME=test MYSQL_PASSWORD=zaphod MYSQL_DATABASE=test
       resources:
         requests:
           cpu: 100m
