update vsphere ipi proxy provision

--- a/ci-operator/step-registry/cucushift/installer/rehearse/vsphere/ipi/proxy/provision/cucushift-installer-rehearse-vsphere-ipi-proxy-provision-chain.yaml
+++ b/ci-operator/step-registry/cucushift/installer/rehearse/vsphere/ipi/proxy/provision/cucushift-installer-rehearse-vsphere-ipi-proxy-provision-chain.yaml
@@ -5,7 +5,7 @@ chain:
   - chain: vsphere-provision-bastionhost
   - ref: ipi-conf-proxy
   - chain: ipi-install-vsphere
-  - ref: enable-qe-catalogsource
+  - ref: enable-qe-catalogsource-disconnected
   env:
   - name: BASTION_HOST_SUBNET
     default: "devqe-segment-221"
