Verifying mysql is present

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -30,7 +30,7 @@ tests:
   steps:
     test:
     - as: dbsetup
-      commands: MYSQL_USERNAME=test MYSQL_PASSWORD=zaphod MYSQL_DATABASE=test
+      commands: MYSQL_USERNAME=test MYSQL_PASSWORD=zaphod MYSQL_DATABASE=test mysql
       from: trilliandb
       resources:
         requests:
