--- a/ci-operator/config/operator-framework/operator-marketplace/operator-framework-operator-marketplace-release-4.15__okd-scos.yaml
+++ b/ci-operator/config/operator-framework/operator-marketplace/operator-framework-operator-marketplace-release-4.15__okd-scos.yaml
@@ -1,6 +1,6 @@
 base_images:
   base:
-    name: "4.14"
+    name: "4.15"
     namespace: origin
     tag: base
   ocp_builder_rhel-8-golang-1.20-openshift-4.14:
@@ -18,17 +18,17 @@ images:
       - registry.ci.openshift.org/ocp/builder:rhel-8-golang-1.20-openshift-4.14
   to: operator-marketplace
 promotion:
-  name: "4.14"
+  name: scos-4.15
   namespace: origin
 releases:
   initial:
     integration:
-      name: "4.14"
+      name: scos-4.15
       namespace: origin
   latest:
     integration:
       include_built_images: true
-      name: "4.14"
+      name: scos-4.15
       namespace: origin
 resources:
   '*':
@@ -42,7 +42,7 @@ tests:
     cluster_profile: gcp
     workflow: openshift-e2e-gcp
 zz_generated_metadata:
-  branch: master
+  branch: release-4.15
   org: operator-framework
   repo: operator-marketplace
-  variant: okd
+  variant: okd-scos
