debug ibmcloud job

--- a/ci-operator/step-registry/cucushift/installer/rehearse/ibmcloud/ipi/workers-rhel8/provision/cucushift-installer-rehearse-ibmcloud-ipi-workers-rhel8-provision-chain.yaml
+++ b/ci-operator/step-registry/cucushift/installer/rehearse/ibmcloud/ipi/workers-rhel8/provision/cucushift-installer-rehearse-ibmcloud-ipi-workers-rhel8-provision-chain.yaml
@@ -24,4 +24,4 @@ chain:
     documentation: |-
       Keep or remove rhcos worker after scaling up rhel worker
   documentation: |-
-    Create a IPI cluster with RHEL worker nodes on IBMCloud for QE e2e tests.
+    debug
