--- a/ci-operator/step-registry/hypershift/mce/agent/conformance/hypershift-mce-agent-conformance-workflow.yaml
+++ b/ci-operator/step-registry/hypershift/mce/agent/conformance/hypershift-mce-agent-conformance-workflow.yaml
@@ -1,11 +1,12 @@
 workflow:
   as: hypershift-mce-agent-conformance
   documentation: |-
-    The HyperShift agent conformance workflow executes tests against a new ephemeral
+    The HyperShift agent conformance workflow executes tests against a new ephemeral temp
   steps:
     allow_best_effort_post_steps: true
     allow_skip_on_success: true
     post:
+    - ref: wait
     - chain: hypershift-mce-agent-destroy
     - ref: baremetalds-packet-gather-metadata
     - chain: baremetalds-ipi-post
