Attempt to provide starting config for SQL

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -29,15 +29,15 @@ tests:
 - as: integration
   steps:
     test:
-    - as: dbsetup
-      commands: MYSQL_USERNAME=test MYSQL_PASSWORD=zaphod MYSQL_DATABASE=test mysql
-      from: trilliandb
-      resources:
-        requests:
-          cpu: 100m
-          memory: 200Mi
     - as: integration
       commands: ./integration/integration_test.sh
+      env:
+      - default: test
+        name: MYSQL_USER
+      - default: zaphod
+        name: MYSQL_PASSWORD
+      - default: test
+        name: MYSQL_DATABASE
       from: src
       resources:
         requests:
