Testing if mysql is present in container

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -30,7 +30,7 @@ tests:
   steps:
     test:
     - as: integration
-      commands: ./integration/integration_test.sh
+      commands: mysql
       env:
       - default: test
         name: MYSQL_USER
@@ -38,7 +38,7 @@ tests:
         name: MYSQL_PASSWORD
       - default: test
         name: MYSQL_DATABASE
-      from: src
+      from: trilliandb
       resources:
         requests:
           cpu: 100m
