--- a/ci-operator/config/app-sre/deployment-validation-operator/app-sre-deployment-validation-operator-master.yaml
+++ b/ci-operator/config/app-sre/deployment-validation-operator/app-sre-deployment-validation-operator-master.yaml
@@ -7,6 +7,10 @@ base_images:
     name: "4.14"
     namespace: origin
     tag: operator-sdk
+  dvo-tests:
+    name: deployment-validation-operator-tests
+    namespace: ci
+    tag: latest
 build_root:
   from_repository: true
 images:
@@ -81,6 +85,14 @@ tests:
       resources:
         requests:
           cpu: 100m
+    - as: test
+      cli: latest
+      commands: |
+        pytest.sh -m
+      from: dvo-tests
+        resources:
+          requests:
+            cpu: 100m
     workflow: generic-claim
 zz_generated_metadata:
   branch: master
