Running resetdb to ensure clean config for tests

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -30,7 +30,9 @@ tests:
   steps:
     test:
     - as: integration
-      commands: mysql
+      commands: |
+        ./scripts/resetdb.sh
+        ./integration/integration_test.sh
       env:
       - default: test
         name: MYSQL_USER
