Changes based on rehearsal tests

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -40,7 +40,7 @@ tests:
         name: MYSQL_PASSWORD
       - default: test
         name: MYSQL_DATABASE
-      from: trilliandb
+      from: src
       resources:
         requests:
           cpu: 100m
