Removing resetting of database

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -30,9 +30,7 @@ tests:
   steps:
     test:
     - as: integration
-      commands: |
-        ./scripts/resetdb.sh
-        ./integration/integration_test.sh
+      commands: ./integration/integration_test.sh
       env:
       - default: test
         name: MYSQL_USER
