Added go mod vendor to fix inconsistency

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -30,7 +30,9 @@ tests:
   steps:
     test:
     - as: integration
-      commands: ./integration/integration_test.sh
+      commands: |
+        go mod vendor
+        ./integration/integration_test.sh
       env:
       - default: test
         name: MYSQL_USER
