--- a/ci-operator/config/openshift/backplane-api/openshift-backplane-api-main.yaml
+++ b/ci-operator/config/openshift/backplane-api/openshift-backplane-api-main.yaml
@@ -19,6 +19,10 @@ tests:
     make generate
   container:
     from: src
+- as: scan
+  commands: make scan
+  container:
+    from: src
 zz_generated_metadata:
   branch: main
   org: openshift
