Pushing sql into src pipeline

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -8,6 +8,9 @@ build_root:
     name: builder
     namespace: ocp
     tag: rhel-9-golang-1.20-openshift-4.14
+images:
+- from: trilliandb
+  to: src
 releases:
   initial:
     integration:
