--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -10,7 +10,7 @@ build_root:
     tag: rhel-9-golang-1.20-openshift-4.14
 images:
 - from: trilliandb
-  to: src
+  to: trillian
 releases:
   initial:
     integration:
