for now we can set it like this

--- a/ci-operator/config/app-sre/deployment-validation-operator/app-sre-deployment-validation-operator-master.yaml
+++ b/ci-operator/config/app-sre/deployment-validation-operator/app-sre-deployment-validation-operator-master.yaml
@@ -88,7 +88,7 @@ tests:
     - as: test
       cli: latest
       commands: |
-        pytest.sh 
+        pytest.sh -m "not ui"
       from: dvo-tests
       resources:
         requests:
