--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -10,14 +10,18 @@ build_root:
     tag: rhel-9-golang-1.20-openshift-4.14
 images:
 - dockerfile_literal: |
-    FROM trilliandb
+    FROM src
     WORKDIR /go/src/github.com/securesign/trillian
     COPY . .
     ENV MYSQL_USER=test
     ENV MYSQL_PASSWORD=zaphod
     ENV MYSQL_DATABASE=test
-  from: trilliandb
-  to: src-with-sql
+  from: src
+  inputs:
+    trilliandb:
+      as:
+      - db
+  to: src-db
 releases:
   initial:
     integration:
