Changing container target

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -45,7 +45,7 @@ tests:
     go mod vendor
     ./integration/integration_test.sh
   container:
-    from: src-with-sql
+    from: src-db
 zz_generated_metadata:
   branch: release-next
   org: securesign
