Trying different pathing

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -10,17 +10,16 @@ build_root:
     tag: rhel-9-golang-1.20-openshift-4.14
 images:
 - dockerfile_literal: |
-    FROM src
-    WORKDIR /go/src/github.com/securesign/trillian
-    COPY . .
+    FROM trilliandb
     ENV MYSQL_USER=test
     ENV MYSQL_PASSWORD=zaphod
     ENV MYSQL_DATABASE=test
-  from: src
+  from: trilliandb
   inputs:
-    trilliandb:
-      as:
-      - db
+    src:
+      paths:
+      - destination_dir: .
+        source_path: /go/src/github.com/securesign/trillian
   to: src-db
 releases:
   initial:
