--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly.yaml
@@ -2196,10 +2196,7 @@ tests:
   steps:
     cluster_profile: azurestack-qe
     env:
-      E2E_RUN_TAGS: '@amd64 and @azure-ipi and @network-ovnkubernetes and not @fips
-        and @destructive'
-      EXTRACT_MANIFEST_INCLUDED: "true"
-      TAG_VERSION: '@4.14'
+      TEST_SCENARIOS: 29804|49617|33238|49441|50052|53053|23959|65371|37415|41552|27491|49705|23958
     test:
     - chain: openshift-e2e-test-qe-destructive
     workflow: cucushift-installer-rehearse-azure-stack-upi
