--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -11,6 +11,8 @@ build_root:
 images:
 - dockerfile_literal: |
     FROM trilliandb
+    WORKDIR /go/src/github.com/securesign/trillian
+    COPY . .
     ENV MYSQL_USER=test
     ENV MYSQL_PASSWORD=zaphod
     ENV MYSQL_DATABASE=test
