--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -11,18 +11,11 @@ build_root:
 images:
 - dockerfile_literal: |
     FROM trilliandb
-    WORKDIR /go/src/github.com/securesign/trillian
-    COPY . .
     ENV MYSQL_USER=test
     ENV MYSQL_PASSWORD=zaphod
     ENV MYSQL_DATABASE=test
   from: trilliandb
-  inputs:
-    src:
-      paths:
-      - destination_dir: .
-        source_path: /go/src/github.com/securesign/trillian
-  to: src-db
+  to: bin
 releases:
   initial:
     integration:
@@ -46,7 +39,7 @@ tests:
     go mod vendor
     ./integration/integration_test.sh
   container:
-    from: src-db
+    from: bin
 zz_generated_metadata:
   branch: release-next
   org: securesign
