Use the latest 4.14 ci release payload when validating hypershift/kubevirt with mce for 4.14
Signed-off-by: David Vossel <davidvossel@gmail.com>

--- a/ci-operator/step-registry/hypershift/mce/kubevirt/create/hypershift-mce-kubevirt-create-chain.yaml
+++ b/ci-operator/step-registry/hypershift/mce/kubevirt/create/hypershift-mce-kubevirt-create-chain.yaml
@@ -51,6 +51,7 @@ chain:
           --memory 16Gi \
           --cores 4 \
           --namespace local-cluster \
+          --release-image ${RELEASE_IMAGE_LATEST} \
           --pull-secret ${PULL_SECRET_PATH}
 
         oc annotate hostedclusters -n local-cluster ${CLUSTER_NAME} "cluster.open-cluster-management.io/managedcluster-name=${CLUSTER_NAME}" --overwrite
