Add archive-results function, prepare-cluster steps, and slack configuration

--- a/ci-operator/config/rhoar-qe/spring-boot-openshift-interop-tests/rhoar-qe-spring-boot-openshift-interop-tests-main__springboot-ocp4.14-lp-interop.yaml
+++ b/ci-operator/config/rhoar-qe/spring-boot-openshift-interop-tests/rhoar-qe-spring-boot-openshift-interop-tests-main__springboot-ocp4.14-lp-interop.yaml
@@ -31,6 +31,7 @@ tests:
     env:
       BASE_DOMAIN: cspilp.interop.ccitredhat.com
     test:
+    - ref: springboot-prepare-cluster
     - ref: springboot-tests-interop
     workflow: ipi-aws
 zz_generated_metadata:
