--- a/ci-operator/step-registry/springboot/tests/interop/springboot-tests-interop-ref.yaml
+++ b/ci-operator/step-registry/springboot/tests/interop/springboot-tests-interop-ref.yaml
@@ -1,6 +1,7 @@
 ref:
   as: springboot-tests-interop
   from: springboot-runner
+  grace_period: 10m
   commands: springboot-tests-interop-commands.sh
   resources:
     requests:
